# euclid_arduino_wrapper

./: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: EuclidArduinoWrapper.cfg  EuclidMotorConfiguration.cfg
launch/: arduino_wrapper_nodelet.launch
src/: euclid_arduino_motor_configuration.cpp  euclid_arduino_motor_configuration.hpp  euclid_arduino_wrapper.cpp  euclid_arduino_wrapper.hpp
